--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	<!-- color box -->
 	<div class="col Cbox">
 		<div class="row BKolor">
-			<button id="reset" onclick="ustaw()" >Reset</button>
+			<button id="reset" onclick="ustaw()" >Nowa Gra</button>
 			<span id="wiadomosc" class="text-center"></span>
 		</div>
 		<div class="row">
