--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="style.css">
-      <script type="text/javascript" src="skrypt.js"> </script>
 
      
 
@@ -106,7 +105,7 @@
 		<button type="button" value="="  onclick="equal()"id="rwn" class="btn btn-warning">=</button>
 	</div>	
 	</div>
-	<!-- color box -->
+<!-- color box -->
 	<div class="col Cbox">
 		<div class="row BKolor">
 			<button id="reset" onclick="ustaw()" >Nowa Gra</button>
@@ -123,7 +122,20 @@
 			<button type="button" onclick="sprawdz(this)" class="btn kolor"></button>	
 		</div>
 	</div>
-	<div class="col"></div>
+<!-- color box -->	
+<!-- Snake -->	
+	<div class="col">
+		<canvas id="oknoGry" width="300" height="300" style="border: dashed 0.15em rgb(67, 238, 16);" ></canvas>
+
+
+
+
+
+
+	</div>
+<!-- Snake -->	
 </div> 
   </body>
+        <script type="text/javascript" src="skrypt.js"> </script>
+      <script type="text/javascript" src="snake.js"> </script>
 </html>
