--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 <!-- color box -->	
 <!-- Snake -->	
 	<div class="col">
+		<span id="punkty" class="text-center">0</span><br>
 		<canvas id="oknoGry" width="300" height="300" style="border: dashed 0.15em rgb(67, 238, 16);" ></canvas>
 
 
