--- a/index.html
+++ b/index.html
@@ -33,19 +33,48 @@
 </ul>
 <div class="row" id="home" style="height: 880px ;margin-top: 10px">
 <img src="avatar.jpg" alt="..." class="shadow-lg p-1 mb-0 bg-dark rounded-circle align-self-center">
-<div class="col align-self-center" >Czesc jestem Krzysiek. I moim marzeniem jest zmienic swiat przez kod.Tworzenie stron i programowanie to moje hobby ktore chce zamienic w prace i lepsza przyszlosc dla nas wszystkich.</div></div>
+<div class="col align-self-center" style="font-family: 'Roboto Mono', monospace; font-size: 25px;" ><p>Cześc jestem Krzysiek.Od dziecka zakochany w sporcie, głownie w siatkówce,piłce ręcznej oraz lekko atletyce w której mam wiele lokalnych osiągnieć.Za czasów szkoly średniej zarażony pasja do programowania która stała sie moim hobby a pózniej kierunkiem w którym chce sie rozwijać i tak jestem tutaj. A to moje skromne portfolio.</p></div></div>
 <div class="row" id="content" style="height: auto;padding-top: 60px;">
   <div class="col" style="border-right: dashed 0.15em rgb(67, 238, 16)" >
   <h5 align="center" ><img src="Nauka.png"  style="margin-bottom: 10px" alt="Co potrafie">Nauka</h5>
-  <p>Ukonczyłem Klase o Profilu Technik Informatyk w Zespole Szkoł nr 2 w Nowym Dworze Grańskim</p>
+  <p>Ukonczyłem Klase o Profilu Technik Informatyk w Zespole Szkoł nr 2 w Nowym Dworze Grańskim.</p>
   </div>
     <div class="col" style="border-right: dashed 0.15em rgb(67, 238, 16)">
       <img src="Omnie.png" class="mx-auto d-block" style="margin-bottom: 10px" alt="Cos o mnie">
-      <p>Jestem Otwartym młodym chłopakiem z Pasja i zaangażowaniem który daży do celu. Uwielbiam Sport głownie siatkówke i piłke ręczna</p>
+      <p>Języki oraz FrameWork'i które znam:</p>
+      HTML:
+      <div class="progress">
+  		<div  role="progressbar" style="width: 65%; background-color: #f16529" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
+	  CSS
+	  <div class="progress">
+  		<div  role="progressbar" style="width: 60%; background-color: #1c84c1" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
+	  JavaScript
+	        <div class="progress">
+  		<div  role="progressbar" style="width: 80%; background-color: #f2bf2c" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
+	  PHP
+	        <div class="progress">
+  		<div  role="progressbar" style="width: 50%; background-color: #7377ac" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
+	  C#
+	  <div class="progress">
+  		<div  role="progressbar" style="width: 72%; background-color: #642075" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
+	  Boostrap
+	  <div class="progress">
+  		<div  role="progressbar" style="width: 70%; background-color: #563d7c" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
+	  Scrum
+	  <div class="progress">
+  		<div  role="progressbar" style="width: 55%; background-color: #4c7db7" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+	  </div>
     </div>
       <div class="col">
       <img src="Certy.png" class="mx-auto d-block" style="margin-bottom: 10px" alt="Moje Certyfikaty">
-      <ul style="list-style-type: none">
+      <ul style="list-style-type: none;font-family: 'Roboto Mono', monospace;
+  font-size: 15px;">
         <li>Kwalifikacja E.12. Montaż i eksploatacja komputerów osobistych oraz urządzeń peryferyjnych</li>
         <br>
         <li>Kwalifikacja E13 Projektowanie lokalnych sieci komputerowych i administrowanie sieciami</li>
@@ -53,10 +82,10 @@
         <li>Kwalifikacja E14 Tworzenie aplikacji internetowych i baz danych oraz administrowanie bazami</li>
         <br>
         <li>4 certyfikat</li>
-      </ul>
+        </ul>
     </div>
 </div>
-      <img src="Exp.png" class="mx-auto d-block" style="margin-bottom: 10px" alt="Moje doswiadczenie">
+      <img src="Exp.png" class="mx-auto d-block" style="margin-bottom: 10px;margin-top: 20px;" alt="Moje doswiadczenie">
       <h5 align="center">Moje Projekty</h5>  
 <!-- Calkulator -->  
 <div class="row"> 
